--- a/bin/cgilib.rc
+++ b/bin/cgilib.rc
@@ -22,7 +22,7 @@ fn perm_redirect { http_redirect $1 '301 Moved Permanantly' }
 fn post_redirect { http_redirect $1 '303 See Other' }
 
 fn x-www-form-urlencoded {
-		dprint x-www-form-urlencoded
+		#dprint x-www-form-urlencoded
         ifs='&
 '       for(pair in `{cat}) {
             ifs='=' { pair=`{echo -n $pair} }
@@ -34,7 +34,7 @@ fn x-www-form-urlencoded {
 }
 
 fn multipart-form-data {
-	dprint multipart-form-data
+	#dprint multipart-form-data
     cdd=`{pwd}
     if(~ $#upload_dir 0)
         upload_dir = /tmp
